@@ -1,3 +1,8 @@
+2011-03-17  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* axis.c(gen_tics): Make sure the axis tic label format string is
+	long enough to hold enhanced text markup.  Fixes buffer overflow.
+
 2011-03-16  Bastian Maerkisch  <bmaerkisch@web.de>
 
 	* src/win/wgraph.c (UnicodeText): new function to convert a string 
